[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "benchmarktool"
authors = [{ name = "Roland Kaminski"},{name = "Tom Schmidt"}]
description = "A benchmark-tool for ASP based systems."
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
    "lxml",
    "pandas",
    "odswriter"
]

[project.optional-dependencies]
format = ["black", "isort", "autoflake"]
lint_pylint = ["pylint"]
typecheck = ["types-setuptools", "mypy"]
test = ["coverage[toml]"]
doc = ["mkdocs", "mkdocs-material", "mkdocstrings[python]"]
dev = ["benchmarktool[test,typecheck,lint_pylint]"]

[project.scripts]
bconv = "benchmarktool.entry_points:start_bconv"
beval = "benchmarktool.entry_points:start_beval"
bgen = "benchmarktool.entry_points:start_bgen"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_scheme = "python-simplified-semver"
local_scheme = "no-local-version"

[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line-length = 120

[tool.pylint.format]
max-line-length = 120

[tool.pylint.design]
max-args = 10
max-attributes = 7
max-bool-expr = 5
max-branches = 12
max-locals = 30
max-parents = 7
max-public-methods = 20
max-returns = 10
max-statements = 50
min-public-methods = 1

[tool.pylint.similarities]
ignore-comments = true
ignore-docstrings = true
ignore-imports = true
ignore-signatures = true

[tool.pylint.basic]
argument-rgx = "^[a-z][a-z0-9]*((_[a-z0-9]+)*_?)?$"
variable-rgx = "^[a-z][a-z0-9]*((_[a-z0-9]+)*_?)?$"
good-names = ["_"]

[tool.pylint."messages control"]
disable = ["consider-using-f-string", "duplicate-code"]
extension-pkg-allow-list = ["lxml"]

[tool.coverage.run]
omit = [""]
include = ["src/*", "tests/*"]

[tool.coverage.report]
exclude_also = ["assert", "nocoverage"]
